--- a/package.json
+++ b/package.json
@@ -38,40 +38,43 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@angular/cli": "1.6.4",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
+    "@angular/compiler-cli": "5.2.0",
     "@angular/core": "5.2.0",
     "@angular/forms": "5.2.0",
     "@angular/http": "5.2.0",
+    "@angular/language-service": "5.2.0",
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
     "@ngx-translate/core": "9.0.1",
     "@ngx-translate/http-loader": "2.0.0",
-    "core-js": "2.4.1",
-    "enhanced-resolve": "3.3.0",
-    "rxjs": "5.5.2",
-    "zone.js": "0.8.17",
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "5.2.0",
-    "@angular/language-service": "5.2.0",
     "@types/core-js": "0.9.36",
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.2",
     "@types/node": "7.0.7",
+    "angular2-csv": "^0.2.5",
     "autoprefixer": "7.1.4",
     "circular-dependency-plugin": "3.0.0",
     "codelyzer": "3.2.0",
     "copy-webpack-plugin": "4.1.1",
     "copyfiles": "1.2.0",
+    "core-js": "2.4.1",
     "cross-env": "5.0.5",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
     "electron": "1.7.11",
     "electron-builder": "19.45.4",
+    "electron-pdf": "^1.2.2",
+    "electron-pdf-window": "^1.0.12",
     "electron-reload": "1.2.1",
+    "enhanced-resolve": "3.3.0",
+    "exceljs": "^0.8.2",
     "exports-loader": "0.6.4",
     "file-loader": "1.1.5",
+    "file-saver": "^1.3.3",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.29.0",
     "istanbul-instrumenter-loader": "3.0.0",
@@ -86,15 +89,19 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-sourcemap-loader": "0.3.7",
     "less-loader": "4.0.5",
+    "lodash": "^4.17.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
+    "ng2-handsontable": "^2.0.0",
     "npm-run-all": "4.1.1",
     "npx": "9.7.1",
+    "postcss-custom-properties": "6.2.0",
     "postcss-loader": "2.0.6",
     "postcss-url": "7.1.2",
-    "postcss-custom-properties": "6.2.0",
     "protractor": "5.1.2",
+    "random-sentence": "^1.0.4",
     "raw-loader": "0.5.1",
+    "rxjs": "5.5.2",
     "sass-loader": "6.0.6",
     "script-loader": "0.7.1",
     "source-map-loader": "0.2.1",
@@ -108,7 +115,10 @@
     "webdriver-manager": "12.0.6",
     "webpack": "3.8.1",
     "webpack-concat-plugin": "1.4.0",
-    "webpack-dev-server": "2.9.3"
+    "webpack-dev-server": "2.9.3",
+    "xlsx": "^0.12.0",
+    "xlsx-style": "^0.8.13",
+    "zone.js": "0.8.17"
   },
   "license": "SEE LICENSE IN LICENSE.md"
 }
