--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "7.0.7",
     "angular2-csv": "^0.2.5",
+    "angular4-files-upload": "^1.0.2",
     "autoprefixer": "7.1.4",
     "circular-dependency-plugin": "3.0.0",
     "codelyzer": "3.2.0",
@@ -92,6 +93,7 @@
     "lodash": "^4.17.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
+    "ng2-file-upload": "^1.3.0",
     "ng2-handsontable": "^2.0.0",
     "npm-run-all": "4.1.1",
     "npx": "9.7.1",
