--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "angular-electron",
   "version": "2.6.0",
   "description": "Angular 5 with Electron (Typescript + SASS + Hot Reload)",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "homepage": "https://github.com/tricon-himani/angular-electron",
   "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
+    "name": "Himani Singh",
+    "email": "himanisingh@triconinfotech.com"
   },
   "keywords": [
     "angular",
