--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "angular-electron",
-  "version": "2.6.0",
-  "description": "Angular 5 with Electron (Typescript + SASS + Hot Reload)",
+  "name": "angular_electron",
+  "productName": "Angular electron smithsville app ",
+  "version": "1.0.0",
+  "description": "App for cities of smithsville",
   "homepage": "https://github.com/tricon-himani/angular-electron",
   "author": {
     "name": "Himani Singh",
@@ -34,10 +35,12 @@
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "karma start ./karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
-    "e2e": "protractor ./protractor.conf.js"
+    "e2e": "protractor ./protractor.conf.js",
+    "package": "electron-packager . AngularElectron --platform=win32 --arch=x64 --out=release/package"
+    
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "electron-pdf-window": "^1.0.12",  
     "@angular/cli": "1.6.4",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
@@ -56,7 +59,6 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "7.0.7",
     "angular2-csv": "^0.2.5",
-    "angular4-files-upload": "^1.0.2",
     "autoprefixer": "7.1.4",
     "circular-dependency-plugin": "3.0.0",
     "codelyzer": "3.2.0",
@@ -68,9 +70,11 @@
     "cssnano": "3.10.0",
     "electron": "1.7.11",
     "electron-builder": "19.45.4",
-    "electron-pdf": "^1.2.2",
-    "electron-pdf-window": "^1.0.12",
+    "electron-installer-squirrel-windows": "^1.3.0",
+    "electron-packager": "^11.0.1",
     "electron-reload": "1.2.1",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^2.6.4",
     "enhanced-resolve": "3.3.0",
     "exceljs": "^0.8.2",
     "exports-loader": "0.6.4",
@@ -83,6 +87,7 @@
     "jasmine-spec-reporter": "4.2.1",
     "jquery": "^3.3.1",
     "json-loader": "0.5.7",
+    "jspdf": "^1.3.5",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
@@ -94,7 +99,6 @@
     "lodash": "^4.17.5",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
-    "ng2-file-upload": "^1.3.0",
     "ng2-handsontable": "^2.0.0",
     "npm-run-all": "4.1.1",
     "npx": "9.7.1",
