--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "karma start ./karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
     "e2e": "protractor ./protractor.conf.js",
-    "package": "electron-packager . AngularElectron --platform=win32 --arch=x64 --out=release/package"
+    "package:windows": "electron-packager . AngularElectron --platform=win32 --arch=x64 --out=release/package",
+    "package:mac": "electron-packager . AngularElectron --platform=darwin --arch=x64 --out=release/package"
     
   },
   "dependencies": {
