--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "test": "karma start ./karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
     "e2e": "protractor ./protractor.conf.js",
-    "package:windows": "electron-packager . AngularElectron --platform=win32 --arch=x64 --out=release/package",
-    "package:mac": "electron-packager . AngularElectron --platform=darwin --arch=x64 --out=release/package"
+    "package:windows": "electron-packager . AngularElectron --platform=win32 --arch=x64 --out=release/package --asar=true",
+    "package:mac": "electron-packager . AngularElectron --platform=darwin --arch=x64 --out=release/package --asar=true"
     
   },
   "dependencies": {
@@ -123,10 +123,11 @@
     "webdriver-manager": "12.0.6",
     "webpack": "3.8.1",
     "webpack-concat-plugin": "1.4.0",
-    "webpack-dev-server": "2.9.3",
-    "xlsx": "^0.12.0",
-    "xlsx-style": "^0.8.13",
+    "webpack-dev-server": "2.9.3",  
     "zone.js": "0.8.17"
   },
-  "license": "SEE LICENSE IN LICENSE.md"
+  "license": "SEE LICENSE IN LICENSE.md",
+  "asar": {
+    "unpackDir": "node_modules"
+  }
 }
